# kindpath-q

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
apps/standalone/: CMakeLists.txt  Main.cpp
assets/: README.md
core/analysis/: AnalysisEngine.cpp  AnalysisEngine.h
core/dsp/: MonoUtils.h
core/education/: EducationCards.cpp  EducationCards.h  cards.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEV_SETUP.md  PROJECT_BRIEF.md
plugins/kindpath-q/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
prompts/: codex-scaffold-kindpath-q.txt
scripts/: bootstrap_macos.sh  build_macos.sh
shared/: JuceIncludes.h
ui/: AnalysisPanel.cpp  AnalysisPanel.h  EducationPanel.cpp  EducationPanel.h  KindPathMainComponent.cpp  KindPathMainComponent.h  TransportBar.cpp  TransportBar.h  WaveformView.cpp  WaveformView.h
